[tool.poetry]
name = "codebrain"
version = "0.1.0"
description = ""
authors = ["KyoungHwan <xzt______@naver.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
geoalchemy2 = "^0.15.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
